fixed bug in removal of species only from mapped seq

--- a/docs/Untitled-Copy1.ipynb
+++ b/docs/Untitled-Copy1.ipynb
@@ -109,13 +109,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r20X_0_0\n",
+      "0.95173458632\n",
+      "0.117541030371\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r50X_0_0\n",
+      "0.978738693378\n",
+      "0.0753968800902\n"
+     ]
+    }
+   ],
    "source": [
     "from Bio import SeqIO\n",
     "import numpy as np\n",
@@ -140,13 +153,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Loading OGs : 0 ogs [00:00, ? ogs/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r20X_0_0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs : 701 ogs [00:12, 54.34 ogs/s]\n",
+      "Aligning OGs : 100%|██████████| 698/698 [02:17<00:00,  3.01 alignments/s]\n",
+      "Loading OGs : 0 ogs [00:00, ? ogs/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.37679083095\n",
+      "8.41235821813\n",
+      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r50X_0_0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs : 701 ogs [00:15, 44.99 ogs/s]\n",
+      "Aligning OGs : 100%|██████████| 698/698 [02:23<00:00,  5.48 alignments/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.44555873926\n",
+      "8.94558776421\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from Bio import SeqIO\n",
     "from zoo.wrappers.aligners import Mafft\n",
@@ -156,7 +226,7 @@
     "import os\n",
     "import re\n",
     "output_path='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/'\n",
-    "mapping='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_09X_0_0/'\n",
+    "mapping='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_20X_0_0/'\n",
     "real='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/m_bg25/01_ref_ogs_aa/'\n",
     "all_diff = {}\n",
     "for folder in glob.iglob(output_path+'/04_*', recursive=True):\n",
@@ -224,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -303,13 +373,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs : 701 ogs [00:16, 43.36 ogs/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "698"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "from tqdm import tqdm\n",
@@ -317,23 +405,28 @@
     "from Bio import SeqIO, Seq, SeqRecord\n",
     "from Bio.Alphabet import SingleLetterAlphabet\n",
     "from Bio.SeqIO.FastaIO import FastaWriter\n",
-    "mapping='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_01X_0_0/'\n",
+    "mapping='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r50X_0_0/'\n",
     "real='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/m_bg25/01_ref_ogs_aa/'\n",
-    "to_check = []\n",
+    "to_check_map = []\n",
+    "to_check_original = []\n",
     "for file in tqdm(glob.iglob(mapping+\"*.fa\"), desc='Loading OGs ', unit=' ogs'):\n",
-    "        map_rec = SeqIO.parse(file, \"fasta\")\n",
-    "        for record in map_rec:\n",
-    "            if 'SRR51' in record.id:\n",
-    "                to_check.append(record)\n",
-    "#         if os.path.exists(real+os.path.basename(file)):\n",
-    "#             ori_rec = SeqIO.parse(real+os.path.basename(file), \"fasta\")\n",
-    "#             for record in ori_rec:\n",
-    "#                 if 'MOUSE' in record.id:\n",
-    "#                     to_check.append(record)\n",
+    "    map_rec = SeqIO.parse(file, \"fasta\")\n",
+    "    for record in map_rec:\n",
+    "        if 'SRR51' in record.id:\n",
+    "            to_check_map.append(record)\n",
+    "    if os.path.exists(real+os.path.basename(file)):    \n",
+    "        ori_rec = SeqIO.parse(real+os.path.basename(file), \"fasta\")\n",
+    "        for record in ori_rec:\n",
+    "            if 'MOUSE' in record.id:\n",
+    "                to_check_original.append(record)\n",
     "\n",
-    "handle = open('/Users/daviddylus/Desktop/01x.fa', \"w\")\n",
+    "handle = open('/Users/daviddylus/Desktop/r50X_map.fa', \"w\")\n",
     "writer = FastaWriter(handle, wrap=None)\n",
-    "writer.write_file(to_check)"
+    "writer.write_file(to_check_map)\n",
+    "\n",
+    "handle = open('/Users/daviddylus/Desktop/r50X_original.fa', \"w\")\n",
+    "writer = FastaWriter(handle, wrap=None)\n",
+    "writer.write_file(to_check_original)"
    ]
   },
   {
@@ -375,7 +468,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -401,7 +496,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -497,7 +594,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
