added better testing set

--- a/docs/Untitled-Copy1.ipynb
+++ b/docs/Untitled-Copy1.ipynb
@@ -109,31 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r20X_0_0\n",
-      "0.95173458632\n",
-      "0.117541030371\n",
-      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r50X_0_0\n",
-      "0.978738693378\n",
-      "0.0753968800902\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Bio import SeqIO\n",
     "import numpy as np\n",
     "import re\n",
-    "\n",
+    "import glob\n",
+    "output_path='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/nanopore/wm_bg26/'\n",
     "for folder in glob.iglob(output_path+'/04_*', recursive=True):\n",
     "    print(folder)\n",
     "    all_coverages = []\n",
@@ -141,7 +129,7 @@
     "    for file in glob.iglob(folder+'/*.fa'):\n",
     "        align = SeqIO.parse(file, \"fasta\")\n",
     "        for record in align:\n",
-    "            if 'SRR51' in record.id:\n",
+    "            if 'merge' in record.id:\n",
     "#                 seq = re.sub('-', '', str(record.seq))\n",
     "                xx = str(record.seq).count(\"X\")\n",
     "                aa = len(record.seq)-xx\n",
@@ -153,70 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "Loading OGs : 0 ogs [00:00, ? ogs/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r20X_0_0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading OGs : 701 ogs [00:12, 54.34 ogs/s]\n",
-      "Aligning OGs : 100%|██████████| 698/698 [02:17<00:00,  3.01 alignments/s]\n",
-      "Loading OGs : 0 ogs [00:00, ? ogs/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.37679083095\n",
-      "8.41235821813\n",
-      "/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/04_ogs_map_SRR5171076_r50X_0_0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading OGs : 701 ogs [00:15, 44.99 ogs/s]\n",
-      "Aligning OGs : 100%|██████████| 698/698 [02:23<00:00,  5.48 alignments/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.44555873926\n",
-      "8.94558776421\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Bio import SeqIO\n",
     "from zoo.wrappers.aligners import Mafft\n",
@@ -294,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -373,31 +304,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading OGs : 490 ogs [06:34,  2.15 ogs/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "487"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from tqdm import tqdm\n",
@@ -405,53 +318,71 @@
     "from Bio import SeqIO, Seq, SeqRecord\n",
     "from Bio.Alphabet import SingleLetterAlphabet\n",
     "from Bio.SeqIO.FastaIO import FastaWriter\n",
-    "mapping='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/wm_bg26/without_mapping_to_rat/04_ogs_map_SRR5171076_01X_0_0/'\n",
-    "real='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/SRR5171076/m_bg25/01_ref_ogs_aa/'\n",
+    "mapping='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/nanopore/wm_bg26/04_ogs_map_merge_2X_0_0/'\n",
     "to_check_map = []\n",
     "to_check_original = []\n",
     "for file in tqdm(glob.iglob(mapping+\"*.fa\"), desc='Loading OGs ', unit=' ogs'):\n",
     "    map_rec = SeqIO.parse(file, \"fasta\")\n",
     "    for record in map_rec:\n",
-    "        if 'SRR51' in record.id:\n",
+    "        if 'merge' in record.id:\n",
     "            to_check_map.append(record)\n",
-    "    if os.path.exists(real+os.path.basename(file)):    \n",
-    "        ori_rec = SeqIO.parse(real+os.path.basename(file), \"fasta\")\n",
-    "        for record in ori_rec:\n",
-    "            if 'MOUSE' in record.id:\n",
-    "                to_check_original.append(record)\n",
+    "#     if os.path.exists(real+os.path.basename(file)):    \n",
+    "#         ori_rec = SeqIO.parse(real+os.path.basename(file), \"fasta\")\n",
+    "#         for record in ori_rec:\n",
+    "#             if 'MOUSE' in record.id:\n",
+    "#                 to_check_original.append(record)\n",
     "\n",
-    "handle = open('/Users/daviddylus/Desktop/01X_wr_map.fa', \"w\")\n",
+    "handle = open('/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/nanopore/blast/2X_map_nanopore.fa', \"w\")\n",
     "writer = FastaWriter(handle, wrap=None)\n",
     "writer.write_file(to_check_map)\n",
     "\n",
-    "handle = open('/Users/daviddylus/Desktop/01X_wr_original.fa', \"w\")\n",
+    "# handle = open('/Users/daviddylus/Desktop/01X_wr_original.fa', \"w\")\n",
+    "# writer = FastaWriter(handle, wrap=None)\n",
+    "# writer.write_file(to_check_original)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "import glob\n",
+    "from Bio import SeqIO, Seq, SeqRecord\n",
+    "from Bio.Alphabet import SingleLetterAlphabet\n",
+    "from Bio.SeqIO.FastaIO import FastaWriter\n",
+    "mapping='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/illumina/SRR5171076/wm_bg26/without_mapping_to_rat/04_ogs_map_SRR5171076_01X_0_0/'\n",
+    "real='/Users/daviddylus/mnt/read2tree/mouse/read2tree_out/illumina/SRR5171076/m_bg25/01_ref_ogs_aa/'\n",
+    "to_check_map = []\n",
+    "to_check_original = []\n",
+    "for file in tqdm(glob.iglob(real+\"*.fa\"), desc='Loading OGs ', unit=' ogs'):\n",
+    "    ori_rec = SeqIO.parse(file, \"fasta\")\n",
+    "    for record in ori_rec:\n",
+    "            if 'MOUSE' in record.id:\n",
+    "                to_check_original.append(record)\n",
+    "\n",
+    "# handle = open('/Users/daviddylus/Desktop/01X_wr_map.fa', \"w\")\n",
+    "# writer = FastaWriter(handle, wrap=None)\n",
+    "# writer.write_file(to_check_map)\n",
+    "\n",
+    "handle = open('/Users/daviddylus/Desktop/original.fa', \"w\")\n",
     "writer = FastaWriter(handle, wrap=None)\n",
     "writer.write_file(to_check_original)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daviddylus/.pyenv/versions/3.5.1/envs/notebook3/lib/python3.5/site-packages/tables/leaf.py:396: PerformanceWarning: The Leaf ``/Protein/_i_Entries/OmaHOG/sorted`` is exceeding the maximum recommended rowsize (104857600 bytes);\n",
-      "be ready to see PyTables asking for *lots* of memory and possibly slow\n",
-      "I/O.  You may want to reduce the rowsize by trimming the value of\n",
-      "dimensions that are orthogonal (and preferably close) to the *main*\n",
-      "dimension of this leave.  Alternatively, in case you have specified a\n",
-      "very small/large chunksize, you may want to increase/decrease it.\n",
-      "  PerformanceWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tables import *\n",
     "from pyoma.browser import db\n",
@@ -466,21 +397,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "blub\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "species_list = [row['UniProtSpeciesCode'].decode(\"utf-8\") for row in bdb_id_map.genome_table]\n",
     "\n",
@@ -494,89 +417,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "for file in glob.iglob(\"/Users/daviddylus/Research/read2tree/read2tree/tests/marker_genes/*.fa\"):\n",
@@ -585,18 +432,300 @@
     "        species = record.description[record.description.find(\"[\") + 1:record.description.find(\"]\")]\n",
     "        if len(species.split(\" \")) > 1:\n",
     "            new_id = species.split(\" \")[0][0:3] + species.split(\" \")[1][0:2]\n",
-    "            species = new_id.upper()\n",
-    "        if species in species_column:\n",
-    "            print('here')"
+    "            species = new_id.upper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Loading OGs : 0 ogs [00:00, ? ogs/s]\u001b[A\n",
+      "Loading OGs : 1 ogs [00:02,  2.56s/ ogs]\u001b[A\n",
+      "Loading OGs : 3 ogs [00:02,  1.81s/ ogs]\u001b[A\n",
+      "Loading OGs : 5 ogs [00:02,  1.29s/ ogs]\u001b[A\n",
+      "Loading OGs : 7 ogs [00:02,  1.08 ogs/s]\u001b[A\n",
+      "Loading OGs : 9 ogs [00:03,  1.50 ogs/s]\u001b[A\n",
+      "Loading OGs : 11 ogs [00:03,  2.05 ogs/s]\u001b[A\n",
+      "Loading OGs : 13 ogs [00:03,  2.78 ogs/s]\u001b[A\n",
+      "Loading OGs : 1604 ogs [01:51, 14.36 ogs/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "import glob\n",
+    "from Bio import SeqIO, Seq, SeqRecord\n",
+    "from Bio.Alphabet import SingleLetterAlphabet\n",
+    "from Bio.SeqIO.FastaIO import FastaWriter\n",
+    "folder = '/Users/daviddylus/mnt/read2tree/canva/read2tree/01_ref_ogs_aa/'\n",
+    "real = '/Users/daviddylus/mnt/read2tree/canva/oma/dataset1/Output_with_CANVA/OrthologousGroupsFasta/'\n",
+    "for_alignment = {}\n",
+    "for file in tqdm(glob.iglob(folder+\"/*.fa\"), desc='Loading OGs ', unit=' ogs'):\n",
+    "    if os.path.exists(real+os.path.basename(file)):\n",
+    "        ori_rec = list(SeqIO.parse(real+os.path.basename(file), \"fasta\"))\n",
+    "        for record in ori_rec:\n",
+    "            species = record.description[record.description.find(\"[\")+1:record.description.find(\"]\")]\n",
+    "            record.id = species\n",
+    "        for_alignment[os.path.basename(file)] = ori_rec\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :   6%|▌         | 100/1604 [04:18<38:03,  1.52s/ ogs] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  12%|█▏        | 200/1604 [08:38<1:13:11,  3.13s/ ogs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  19%|█▊        | 300/1604 [14:53<1:16:00,  3.50s/ ogs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  25%|██▍       | 400/1604 [19:21<44:19,  2.21s/ ogs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  31%|███       | 500/1604 [26:26<1:00:02,  3.26s/ ogs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  37%|███▋      | 600/1604 [30:55<40:00,  2.39s/ ogs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "600 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  44%|████▎     | 700/1604 [36:17<48:13,  3.20s/ ogs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "700 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  50%|████▉     | 800/1604 [41:12<29:21,  2.19s/ ogs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "800 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  56%|█████▌    | 900/1604 [49:08<15:13,  1.30s/ ogs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "900 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  62%|██████▏   | 1000/1604 [56:56<31:09,  3.10s/ ogs] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  69%|██████▊   | 1100/1604 [1:04:02<18:30,  2.20s/ ogs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1100 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  75%|███████▍  | 1200/1604 [1:11:24<14:31,  2.16s/ ogs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1200 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  81%|████████  | 1300/1604 [1:17:42<37:48,  7.46s/ ogs]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1300 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  87%|████████▋ | 1400/1604 [1:24:03<24:10,  7.11s/ ogs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1400 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  94%|█████████▎| 1500/1604 [1:31:44<07:48,  4.50s/ ogs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1500 of alignments done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading OGs :  96%|█████████▌| 1537/1604 [1:34:40<05:44,  5.15s/ ogs]"
+     ]
+    }
+   ],
+   "source": [
+    "from zoo.wrappers.aligners import Mafft\n",
+    "\n",
+    "align_list = []\n",
+    "counter = 0\n",
+    "for key, value in tqdm(for_alignment.items(), desc='Loading OGs ', unit=' ogs'): \n",
+    "    mafft_wrapper = Mafft(value, datatype=\"PROTEIN\")\n",
+    "    mafft_wrapper.options.options['--localpair'].set_value(True)\n",
+    "    mafft_wrapper.options.options['--maxiterate'].set_value(1000)\n",
+    "    alignment = mafft_wrapper()\n",
+    "    align_list.append(alignment)\n",
+    "    counter += 1\n",
+    "    if counter%100 == 0:\n",
+    "        print('{} of alignments done'.format(counter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
