addition of ability to change parameters

--- a/docs/Untitled.ipynb
+++ b/docs/Untitled.ipynb
@@ -70,6 +70,11 @@
     "                            help='[Default is remove from everywhere]'\n",
     "                                 'Remove species only from mapping set.')\n",
     "\n",
+    "arg_parser.add_argument('--ngmlr_parameter', default=None,\n",
+    "                            help='[Default is none] Remove species present in data set after '\n",
+    "                                 'mapping step completed and only do analysis on '\n",
+    "                                 'subset. Input is comma separated list without spaces, e.g. '\n",
+    "                                 'XXX,YYY,AAA.')\n",
     "    # Arguments to generate the reference\n",
     "arg_parser.add_argument('-r', '--reference', action='store_true',\n",
     "                            help='Just generate the reference dataset for mapping')\n",
